<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/BrowseCategoryStyle"
        android:gravity="center"
        android:text="@string/browse" />

    <TextView
        android:id="@+id/songs_text_view"
        style="@style/BrowseCategoryStyle"
        android:text="@string/songs" />

    <TextView
        android:id="@+id/artists_text_view"
        style="@style/BrowseCategoryStyle"
        android:text="@string/artists" />

    <TextView
        android:id="@+id/albums_text_view"
        style="@style/BrowseCategoryStyle"
        android:text="@string/albums" />

    <TextView
        android:id="@+id/now_playing_text_view"
        style="@style/BrowseCategoryStyle"
        android:text="@string/nowPlaying" />


</LinearLayout>