<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding16"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artist_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:src="@drawable/artist_icon" />

    <TextView
        android:id="@+id/artist_name_text_view"
        style="@style/RegularStyle"
        android:text="@string/artist1"
        android:gravity="center"/>

    <TextView
        style="@style/BrowseCategoryStyle"
        android:text="@string/albums" />

    <TextView
        android:id="@+id/album_text_view"
        style="@style/BrowseCategoryStyle"
        android:gravity="center"
        android:text="@string/album1" />

    <TextView
        style="@style/BrowseCategoryStyle"
        android:text="@string/songs" />

    <TextView
        android:id="@+id/song_text_view"
        style="@style/BrowseCategoryStyle"
        android:gravity="center"
        android:text="@string/song1" />

</LinearLayout>