<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowseSongsActivity"
    android:orientation="vertical"
    android:padding="@dimen/padding16"
    android:id="@+id/song_parent_view">

    <TextView
        android:id="@+id/song_text_view"
        style="@style/RegularStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song1"/>

    <TextView
        android:id="@+id/artist_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist1"/>

    <TextView
        android:id="@+id/album_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album1"/>

</LinearLayout>